eks-depoly/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zufeto-app
  namespace: zufeto
  labels:
    app: zufeto
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zufeto
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: zufeto
    spec:
      serviceAccountName: zufeto-sa
      containers:
      - name: zufeto
        image: REPLACE_WITH_ECR_URI:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
