eks-depoly/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zufeto-service
  namespace: zufeto
spec:
  type: ClusterIP
  selector:
    app: zufeto
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
